--- a/style.css
+++ b/style.css
@@ -24,23 +24,20 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 40px;
-    margin-top: 20px;
+    margin-top: 20px;    
   }
 
-  .pokemon-container:hover{
-    
-  }
+
   
   .pokemon-block,
   .pokemon-block-back {
     border-radius: 10px;
     padding: 10px;
-    background-color: white;
-    box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
+    background-color: rgba(255, 255, 255, 0.888);
+    box-shadow: 0 3px 15px rgba(36, 30, 35, 1.801);
   }
   
-  .img-container {
-    background-image: url("./blob.svg");
+  .img-container { /*pendiente poner un fondo distinto*/
     background-repeat: no-repeat;
     background-position: center;
   }
@@ -98,5 +95,5 @@ body {
   .stat-container {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    text-align: left;
+    text-align: center;
   }
