--- a/style.css
+++ b/style.css
@@ -97,3 +97,10 @@ body {
     grid-template-columns: 1fr 2fr;
     text-align: center;
   }
+
+.pagination{
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+}
